@@ -1,51 +1,6 @@
 "GeneNames" "GeneIndex" "ReferenceFreq"
-"Gene43" 43 0.0208
-"Gene1" 1 0.0206
-"Gene42" 42 0.0208
-"Gene33" 33 0.0168
-"Gene6" 6 0.0198
-"Gene26" 26 0.0192
-"Gene27" 27 0.022
-"Gene17" 17 0.02
-"Gene39" 39 0.018
-"Gene38" 38 0.0206
-"Gene37" 37 0.0224
-"Gene12" 12 0.0194
-"Gene36" 36 0.0246
-"Gene49" 49 0.0194
-"Gene16" 16 0.023
-"Gene31" 31 0.0196
-"Gene4" 4 0.0204
-"Gene15" 15 0.0206
-"Gene28" 28 0.0196
-"Gene46" 46 0.0182
-"Gene19" 19 0.0196
-"Gene50" 50 0.0204
-"Gene23" 23 0.0206
-"Gene29" 29 0.016
-"Gene18" 18 0.0212
-"Gene44" 44 0.0188
-"Gene21" 21 0.0174
-"Gene24" 24 0.0194
-"Gene32" 32 0.0226
-"Gene13" 13 0.0192
-"Gene5" 5 0.0174
-"Gene35" 35 0.0184
-"Gene14" 14 0.0226
-"Gene48" 48 0.0188
-"Gene25" 25 0.0208
-"Gene10" 10 0.021
-"Gene22" 22 0.0208
-"Gene2" 2 0.0196
-"Gene41" 41 0.0188
-"Gene34" 34 0.0182
-"Gene3" 3 0.019
-"Gene47" 47 0.0198
-"Gene9" 9 0.0196
-"Gene7" 7 0.0182
-"Gene11" 11 0.0198
-"Gene40" 40 0.0222
-"Gene20" 20 0.0196
-"Gene30" 30 0.0224
-"Gene8" 8 0.0204
-"Gene45" 45 0.0216
+"Gene43" 43 0.2082
+"Gene1" 1 0.2026
+"Gene42" 42 0.1986
+"Gene33" 33 0.196
+"Gene6" 6 0.1946
